myexam/my-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-app-service
spec:
  type: ClusterIP
  selector:
    app: my-java-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      #nodePort: 31000
  #type: NodePort
